syntax = "proto3";

option csharp_namespace = "Generated";

message AutumnRequest
{
	string date = 1;
}