syntax = "proto3";

option csharp_namespace = "Generated";

message HoroscopRequest
{
	string date = 1;
}