syntax = "proto3";

option csharp_namespace = "Generated";

message SpringRequest
{
	string date = 1;
}