syntax = "proto3";

import "HoroscopResponse.proto";
import "SpringRequest.proto";

option csharp_namespace = "Generated";

service SpringService {
	rpc getZodiacSign(SpringRequest) returns (HoroscopResponse);
}