syntax = "proto3";

option csharp_namespace = "Generated";

message SummerRequest
{
	string date = 1;
}