syntax = "proto3";

import "HoroscopResponse.proto";
import "SummerRequest.proto";

option csharp_namespace = "Generated";

service SummerService {
	rpc getZodiacSign(SummerRequest) returns (HoroscopResponse);
}