syntax = "proto3";

option csharp_namespace = "Generated";

message WinterRequest
{
	string date = 1;
}